[package]
name = "v-collections"
version = "0.5.1"
edition = "2021"
description = "A collection of rust datastructures written for fun without profit."
license = "MIT"
repository = "https://github.com/vargrind/v-collections/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
